When a peer registers using WebSocket do not resolve the Contact provided.

(closes issue ASTERISK-20238)
Reported by: james.mortensen


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/11@371482 65c4cc65-6c06-0410-ace0-fbb531ad65f3